# ros1-path-following-bringup

./: CMakeLists.txt  package.xml
config/: following.yaml  localisation.yaml  path_following.yaml  path_matching.yaml  robot_cmd_mux.yaml  teleop_manual.yaml  teleop_steer.yaml  teleop_twist.yaml
config/robots/fat/: sensors.yaml
config/robots/slim/: implements.yaml  sensors.yaml
launch/: localisation_algo.launch  path_following.launch  path_following_algo.launch  simu.launch
launch/common/: joy_manual.launch  post.launch  pre.launch  robot.launch  sensors.launch
scripts/: publish_path
viz/: demo.rviz
