<?xml version="1.0"?>
<package format="2">
  <name>path_following_demo</name>
  <version>0.1.0</version>
  <description>A simple package to test path following</description>

  <maintainer email="cyrille.pierre@inrae.fr">Cyrille Pierre</maintainer>

  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>nmea_navsat_driver</depend>
  <depend>alpo_gazebo</depend>
  <depend>joy</depend>
  <depend>joy_teleop</depend>

  <!-- <depend>nmea_navsat_driver</depend> -->
  <!-- <exec_depend>romea_path_following</exec_depend> -->

</package>
